--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body{
 background-size:cover;
 }
 canvas{
-border:5px;
+border:5px solid white;
 box-shadow:5px 5px 38px blue;
 border-radius:20px;
+margin-top:100px;
 }
